@startuml

title __CONTROLLER's Class Diagram__\n

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.controller {
      class BookController {
          - database : DatabaseReference
          {static} - instance : BookController
          - BookController()
          {static} + getInstance()
          + addBook()
          + getBook()
          + updateBook()
          + deleteBook()
          + requestBook()
          + cancelRequest()
          + returnBook()
          + acceptBookRequest()
          + declineBookRequest()
          + exchangeBook()
          - addMyBorrowedBook()
          + getMyBorrowedBook()
          + getMyBorrowedBooks()
          - updateMyBorrowedBook()
          - deleteMyBorrowedBook()
          + addMyOwnedBook()
          + getMyOwnedBook()
          + getMyOwnedBooks()
          + updateMyOwnedBook()
          + deleteMyOwnedBook()
          - addUserBorrowedBook()
          + getUserBorrowedBook()
          + getUserBorrowedBooks()
          - updateUserBorrowedBook()
          - deleteUserBorrowedBook()
          - addUserOwnedBook()
          + getUserOwnedBook()
          + getUserOwnedBooks()
          - updateUserOwnedBook()
          - deleteUserOwnedBook()
          - addUserBook()
          - getUserBook()
          - getUserBooks()
          - updateUserBook()
          - deleteUserBook()
          - updateUserBook()
          - addAvailableOwner()
          - removeAvailableOwner()
          - getMyUserId()
          - getBookDatabaseReference()
          - getUserDatabaseReference()
          - getUserBooksReference()
          - getUserBookReference()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.controller {
      class BookParser {
          {static} + UserBooksToBookList()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.controller {
      class ChatController {
          - database : FirebaseDatabase
          {static} - instance : ChatController
          - ChatController()
          {static} + getInstance()
          + addChatRoom()
          - addChatRoomPrivate()
          - checkChatRoomExists()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.controller {
      class ImageController {
          - IMAGE_FORMAT : String
          - storage : StorageReference
          {static} - instance : ImageController
          - ImageController()
          {static} + getInstance()
          + addImage()
          + getImage()
          + updateImage()
          + deleteImage()
          - getImageReference()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.controller {
      class SearchController {
          - client : Client
          - index : Index
          - gson : Gson
          {static} - instance : SearchController
          - SearchController()
          {static} + getInstance()
          + searchBooks()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.controller {
      class UserController {
          - auth : FirebaseAuth
          - database : FirebaseDatabase
          {static} - instance : UserController
          - UserController()
          {static} + getInstance()
          + isAuthenticated()
          + authenticate()
          + deauthenticate()
          + createUser()
          + getMyId()
          - getUserEmail()
          + getUserProfile()
          + getMyProfile()
          + updateMyProfile()
      }
    }
  }
  
UserController "1" -down- "*" User : manages >
UserController "1" -down- "*" UserProfile : manages >

BookController "1" -down- "*" BorrowedBook : manages >
BookController "1" -down- "*" OwnedBook : manages >
BookController "1" -down- "*" Book : manages >
BookController "1" -right- "1" UserController : interfaces with >

ChatController "1" -down- "*" ChatRoom : manages >
ChatController "1" -down- "*" Message : manages >
ChatController "1" -left- "1" UserController : interfaces with >

BookParser "1" -- "1" BookController
BookParser "1" -- "1" UserController
BookParser "1" -- "1" ImageController

right footer


PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
